# VulkanInteractiveFractal

./: CMakeLists.txt  main.cpp  vcpkg-configuration.json  vcpkg.json
.github/workflows/: windows.yml
shaders/: fractal.comp
vkbase/: CMakeLists.txt  vkbase.cppm
vkbase/interface/: builders.cppm  primitives.cppm
vkbase/interface/details/: range_utils.cppm  ref_holder.cppm
vkutil/: CMakeLists.txt  vkutil.cppm
vkutil/cmake/: CompileVulkanShader.cmake
vkutil/include/vkutil/: macros.hpp
vkutil/interface/: buffer.cppm  image.cppm  lifetime_holder.cppm  pipeline.cppm  ref_holder.cppm  rendering.cppm  transfer.cppm  vertex.cppm  window.cppm
